fix: change package name GH-1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repository",
+  "name": "@nestbyte/repository",
   "description": "",
   "author": "AryanshMahato",
   "license": "MIT",
