--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "migration:run": "ts-node migrate.ts"
   },
   "dependencies": {
+    "@nestbyte/orm": "^1.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "drizzle-orm": "^0.28.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
